--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 .container {
    display: flex;
    justify-content: center;
+   flex-wrap: wrap;
 }
 
 .string {
@@ -12,4 +13,8 @@
    margin: 1rem;
    padding: 1rem;
    width: 1rem;
+}
+
+.active {
+   border: dashed 3px red;
 }
