--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,12 @@ body {
    margin: 1rem;
    padding: 1rem;
    width: 1rem;
+   transition: all 3.5s;
 }
 
+/*Show that the string is playing*/
 .active {
-   border: dashed 3px red;
+   border-color: red;
+   transform: scale(1.5)
 }
+
